cleanup, assets, and some more ish

--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -16,6 +16,7 @@
 @import "ui/fontawesome";
 @import "ui/twitter";
 @import "ui/wall";
+@import "ui/video";
 
 @import "pages/featured";
 @import "pages/videos";
