--- a/resources/assets/less/ui/general.less
+++ b/resources/assets/less/ui/general.less
@@ -15,6 +15,7 @@ html {
   height: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -22,7 +23,6 @@ body {
   height: 100%;
   max-width: 100%;
   background: #2c2c2c;
-  // font-family: 'Lato', sans-serif;
   font-family: Helvetica Neue, Helvetica, Arial;
   font-weight: 300;
   font-size: 16px;
@@ -32,6 +32,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
 }
 
 h1,
