--- a/resources/assets/less/ui/section.less
+++ b/resources/assets/less/ui/section.less
@@ -47,6 +47,15 @@
   color: #646464;
 }
 
+.section-solid-white.page-section {
+  background-color: transparent;
+  .section-title-border {
+    border-color: #fff;
+  }
+}
+
+
+
 .section-solid-white h1,
 .section-solid-white h2,
 .section-solid-white h3,
@@ -59,6 +68,8 @@
 .section-solid-white .section-title-border {
   background: rgba(0, 0, 0, 0.13);
 }
+
+
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
