--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -13,6 +13,7 @@ html {
   height: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 body {
   position: relative;
@@ -28,6 +29,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
 }
 h1,
 h2,
@@ -201,6 +203,12 @@ a.logo-link {
   background: #fff;
   color: #646464;
 }
+.section-solid-white.page-section {
+  background-color: transparent;
+}
+.section-solid-white.page-section .section-title-border {
+  border-color: #fff;
+}
 .section-solid-white h1,
 .section-solid-white h2,
 .section-solid-white h3,
@@ -284,7 +292,7 @@ p.copyright {
 #menuToggle {
   display: block;
   text-align: center;
-  font-size: 20px;
+  font-size: 26px;
   color: #ffffff;
   opacity: .75;
   width: 40px;
@@ -293,8 +301,6 @@ p.copyright {
   cursor: pointer;
   background: rgba(0, 0, 0, 0.25);
   transition: opacity 200ms ease;
-  /*position: fixed;*/
-  /*right: 23px;*/
 }
 #menuToggle:hover {
   opacity: 1;
@@ -335,7 +341,7 @@ span.brand {
   font-weight: 100;
   text-transform: uppercase;
   letter-spacing: -1px;
-  font-size: 1.35em;
+  font-size: 1.5em;
   margin-top: 10px;
   display: block;
   transition: color 200ms ease;
@@ -984,6 +990,49 @@ form.contact-form {
     box-shadow: 0 0 1px #cccccc, 10px 20px 1px #dddddd, -10px 20px 1px #cccccc;
   }
 }
+.video-embed-col .embed {
+  margin-bottom: 15px;
+}
+.video-embed-col .embed iframe.video-iframe {
+  max-width: 100%;
+  border: 5px solid #000;
+}
+.video-details-col h3 {
+  margin: 00;
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 20px;
+  line-height: 28px;
+}
+.video-details-col p.author {
+  margin: 0 0 12px 0;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 14px;
+  font-weight: 300;
+  font-style: italic;
+}
+.video-details-col .description {
+  font-size: 15px;
+  line-height: 22px;
+  color: rgba(0, 0, 0, 0.6);
+  margin: 10px 0 0 0;
+}
+.video-details-col .stats span {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
+  font-weight: 700;
+  display: inline-block;
+  margin-right: 15px;
+}
+.video-details-col .actions {
+  margin: 20px 0 0 0;
+}
+.video-details-col .actions .btn {
+  transition: all 200ms ease-out;
+}
+.video-details-col .actions .btn:hover {
+  border-color: rgba(173, 173, 173, 0.15);
+}
 .btn.btn-youtube {
   background-color: #dd4b39;
   color: #fff;
@@ -1230,6 +1279,8 @@ form.contact-form {
   width: 100%;
   height: 100%;
   padding: 20px 0;
+  background-image: url(/assets/img/background/home/2.jpg);
+  background-size: cover;
 }
 .wrapper {
   padding: 15px 0;
@@ -1272,132 +1323,6 @@ form.contact-form {
 }
 lesshat-selector {
   -lh-property: 0;
-}
-@-webkit-keyframes arrowBounce {
-  0% {
-    -webkit--webkit-transform: translateY(-20px);
-    -moz--webkit-transform: translateY(-20px);
-    -ms--webkit-transform: translateY(-20px);
-    -webkit-transform: translateY(-20px);
-  }
-  50% {
-    -webkit--webkit-transform: translateY(-10px);
-    -moz--webkit-transform: translateY(-10px);
-    -ms--webkit-transform: translateY(-10px);
-    -webkit-transform: translateY(-10px);
-  }
-  100% {
-    -webkit--webkit-transform: translateY(-20px);
-    -moz--webkit-transform: translateY(-20px);
-    -ms--webkit-transform: translateY(-20px);
-    -webkit-transform: translateY(-20px);
-  }
-}
-@-moz-keyframes arrowBounce {
-  0% {
-    -webkit--moz-transform: translateY(-20px);
-    -moz--moz-transform: translateY(-20px);
-    -ms--moz-transform: translateY(-20px);
-    -moz-transform: translateY(-20px);
-  }
-  50% {
-    -webkit--moz-transform: translateY(-10px);
-    -moz--moz-transform: translateY(-10px);
-    -ms--moz-transform: translateY(-10px);
-    -moz-transform: translateY(-10px);
-  }
-  100% {
-    -webkit--moz-transform: translateY(-20px);
-    -moz--moz-transform: translateY(-20px);
-    -ms--moz-transform: translateY(-20px);
-    -moz-transform: translateY(-20px);
-  }
-}
-@-o-keyframes arrowBounce {
-  0% {
-    -webkit--o-transform: translateY(-20px);
-    -moz--o-transform: translateY(-20px);
-    -ms--o-transform: translateY(-20px);
-    -o-transform: translateY(-20px);
-  }
-  50% {
-    -webkit--o-transform: translateY(-10px);
-    -moz--o-transform: translateY(-10px);
-    -ms--o-transform: translateY(-10px);
-    -o-transform: translateY(-10px);
-  }
-  100% {
-    -webkit--o-transform: translateY(-20px);
-    -moz--o-transform: translateY(-20px);
-    -ms--o-transform: translateY(-20px);
-    -o-transform: translateY(-20px);
-  }
-}
-@keyframes arrowBounce {
-  0% {
-    -webkit--webkit-transform: translateY(-20px);
-    -webkit--moz-transform: translateY(-20px);
-    -webkit--ms-transform: translateY(-20px);
-    -moz--webkit-transform: translateY(-20px);
-    -moz--moz-transform: translateY(-20px);
-    -moz--ms-transform: translateY(-20px);
-    -ms--webkit-transform: translateY(-20px);
-    -ms--moz-transform: translateY(-20px);
-    -ms--ms-transform: translateY(-20px);
-    -webkit-transform: translateY(-20px);
-    -moz-transform: translateY(-20px);
-    -ms-transform: translateY(-20px);
-    transform: translateY(-20px);
-  }
-  50% {
-    -webkit--webkit-transform: translateY(-10px);
-    -webkit--moz-transform: translateY(-10px);
-    -webkit--ms-transform: translateY(-10px);
-    -moz--webkit-transform: translateY(-10px);
-    -moz--moz-transform: translateY(-10px);
-    -moz--ms-transform: translateY(-10px);
-    -ms--webkit-transform: translateY(-10px);
-    -ms--moz-transform: translateY(-10px);
-    -ms--ms-transform: translateY(-10px);
-    -webkit-transform: translateY(-10px);
-    -moz-transform: translateY(-10px);
-    -ms-transform: translateY(-10px);
-    transform: translateY(-10px);
-  }
-  100% {
-    -webkit--webkit-transform: translateY(-20px);
-    -webkit--moz-transform: translateY(-20px);
-    -webkit--ms-transform: translateY(-20px);
-    -moz--webkit-transform: translateY(-20px);
-    -moz--moz-transform: translateY(-20px);
-    -moz--ms-transform: translateY(-20px);
-    -ms--webkit-transform: translateY(-20px);
-    -ms--moz-transform: translateY(-20px);
-    -ms--ms-transform: translateY(-20px);
-    -webkit-transform: translateY(-20px);
-    -moz-transform: translateY(-20px);
-    -ms-transform: translateY(-20px);
-    transform: translateY(-20px);
-  }
-}
-.arrow-down {
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  bottom: 40px;
-  display: none;
-}
-.scroll {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  font-size: 35px;
-  padding: 10px;
-  color: #fff;
-  -webkit-animation: arrowBounce 2.5s infinite;
-  -moz-animation: arrowBounce 2.5s infinite;
-  -ms-animation: arrowBounce 2.5s infinite;
-  animation: arrowBounce 2.5s infinite;
 }
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
