views and styles

--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -17,6 +17,8 @@
 @import "ui/twitter";
 @import "ui/wall";
 @import "ui/video";
+@import "ui/user";
+@import "ui/nav";
 
 @import "pages/featured";
 @import "pages/videos";
